fix bug & Add CreateOrUpdateDate

--- a/KanbanFlow.CSharpSDK/KanbanFlow.CSharpSDK.UnitTest/KanbanFlow.CSharpSDK.UnitTest.csproj
+++ b/KanbanFlow.CSharpSDK/KanbanFlow.CSharpSDK.UnitTest/KanbanFlow.CSharpSDK.UnitTest.csproj
@@ -60,6 +60,11 @@
       <Name>KanbanFlow.CSharpSDK</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="OrderedTest1.orderedtest">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
