--- a/KanbanFlow.CSharpSDK/KanbanFlow.CSharpSDK/KanbanFlow.CSharpSDK.csproj
+++ b/KanbanFlow.CSharpSDK/KanbanFlow.CSharpSDK/KanbanFlow.CSharpSDK.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Board.cs" />
     <Compile Include="Cell.cs" />
     <Compile Include="Comment.cs" />
+    <Compile Include="Date.cs" />
     <Compile Include="Internal\GetBoardResponse.cs" />
     <Compile Include="Internal\CreateTaskResponse.cs" />
     <Compile Include="KanbanFlowClient.cs" />
