--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,7 @@
 version: 0.2.{build}
 pull_requests:
   do_not_increment_build_number: true
+configuration: Release
 build:
   project: .\KanbanFlow.CSharpSDK\KanbanFlow.CSharpSDK
   verbosity: normal
