--- a/KanbanFlow.CSharpSDK/KanbanFlow.CSharpSDK/KanbanFlow.CSharpSDK.csproj
+++ b/KanbanFlow.CSharpSDK/KanbanFlow.CSharpSDK/KanbanFlow.CSharpSDK.csproj
@@ -35,16 +35,22 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Board.cs" />
+    <Compile Include="BoardEvent.cs" />
+    <Compile Include="BoardEventCollection.cs" />
     <Compile Include="Cell.cs" />
+    <Compile Include="ChangedProperty.cs" />
     <Compile Include="Comment.cs" />
     <Compile Include="Date.cs" />
+    <Compile Include="DetailedEvent.cs" />
+    <Compile Include="Interface\ITask.cs" />
+    <Compile Include="Internal\Collaborator.cs" />
     <Compile Include="Internal\CreateTaskResponse.cs" />
     <Compile Include="Internal\GetBoardResponse.cs" />
     <Compile Include="KanbanFlowClient.cs" />
     <Compile Include="Label.cs" />
     <Compile Include="Number.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SubTask.cs" />
+    <Compile Include="Subtask.cs" />
     <Compile Include="Task.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
